# webserv

./: .gitignore  CMakeLists.txt  Makefile  Webserv.md
configs/: default.conf  test_config.conf
lib/: Brain.hpp  CGI.hpp  ClientInfo.hpp  Config.hpp  HttpResponse.hpp  HttpServer.hpp  Location.hpp  Socket.hpp  webserv.hpp
src/: formatter.cpp  main_server.cpp  utils.cpp
src/Brain/: Brain.cpp
src/CGI/: CGI.cpp
src/ClientInfo/: ClientInfo.cpp
src/HttpResponse/: HttpResponse.cpp
src/Location/: Location.cpp
src/Server/: HttpServer.cpp
src/ServerConfig/: Config.cpp
test/: StressTestCmds.txt  stresstest
var/www/CGI_Bin/: cgi_script.py
webserv/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  ConfigParser.cpp  ConfigParser.h  ConfigParser.hpp  Makefile  Server.cpp  Server.hpp  Socket.cpp  Socket.h  Socket.hpp  TcpServer.cpp  TcpServer.hpp  formatter.cpp  main.cpp  main_client.cpp  main_server.cpp  server  utils.cpp  utils.hpp  webserv  webserv.hpp
webserv/Brain/: Brain.cpp  Brain.hpp
webserv/Client/: Client.cpp  Client.hpp
webserv/Config/: Config.cpp  Config.hpp
webserv/Location/: Location.cpp  Location.hpp
webserv/Server/: HttpServer.cpp  HttpServer.hpp  TcpServer.cpp  TcpServer.hpp
webserv/ServerConfig/: Config.cpp  Config.hpp
webserv/Socket/: Socket.cpp  Socket.hpp
webserv/config/: default.conf
webserv/configs/: .default.conf.swp  default.conf  test_config.conf
webserv/lib/: Brain.hpp  CGI.hpp  ClientInfo.hpp  Config.hpp  HttpResponse.hpp  HttpServer.hpp  Location.hpp  Socket.hpp  webserv.hpp
webserv/src/: main_server.cpp  utils.cpp
(+33 files in other folders)
